--- a/build.gradle
+++ b/build.gradle
@@ -16,10 +16,24 @@ repositories {
 dependencies {
     compile 'org.json:json:20141113'
     compile 'org.apache.commons:commons-compress:1.7'
+    compile 'org.slf4j:slf4j-api:1.7.25'
+    compile 'org.slf4j:slf4j-ext:1.7.25'
+    compile 'ch.qos.logback:logback-classic:1.2.3'
+    compile 'ch.qos.logback:logback-core:1.2.3'
+
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
-
+task uberJar(type: Jar,dependsOn:[':build']){
+    from configurations.compile.collect { zipTree it }
+    manifest {
+        attributes 'Implementation-Title' : 'yaup',
+                'Implementation-Version' : version,
+                'Main-Class': 'perf.yaup.JarMain'
+    }
+    archiveName "yaup-uber.jar"
+    with jar
+}
 //uploadArchives {
 //    repositories {
 //        mavenDeployer {
