--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     compile 'org.slf4j:slf4j-ext:1.7.25'
     compile 'ch.qos.logback:logback-classic:1.2.3'
     compile 'ch.qos.logback:logback-core:1.2.3'
+    compile 'commons-cli:commons-cli:1.4'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
