--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,8 @@ dependencies {
     compile 'ch.qos.logback:logback-classic:1.2.3'
     compile 'ch.qos.logback:logback-core:1.2.3'
     compile 'commons-cli:commons-cli:1.4'
-
+    compile 'org.yaml:snakeyaml:1.23'
+    
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
