--- a/build.gradle
+++ b/build.gradle
@@ -3,18 +3,40 @@ version '0.2-SNAPSHOT'
 
 apply plugin: 'java'
 apply plugin: 'maven'
+apply plugin: 'idea'
 
 //apply plugin: 'maven-publish'
 
 sourceCompatibility = 1.8
 
+buildscript {
+    repositories {
+        jcenter()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+    dependencies {
+        classpath "me.champeau.gradle:jmh-gradle-plugin:0.4.7"
+    }
+}
+
+/*
+https://github.com/melix/jmh-gradle-plugin
+ */
+apply plugin: "me.champeau.gradle.jmh"
+
 repositories {
     mavenLocal()
     mavenCentral()
+    jcenter()
+    maven {
+        url "https://plugins.gradle.org/m2/"
+    }
 }
 
 dependencies {
-    compile 'org.json:json:20141113'
+    compile 'org.json:json:20180813'
     compile 'org.apache.commons:commons-compress:1.7'
     compile 'org.slf4j:slf4j-api:1.7.25'
     compile 'org.slf4j:slf4j-ext:1.7.25'
@@ -22,8 +44,25 @@ dependencies {
     compile 'ch.qos.logback:logback-core:1.2.3'
     compile 'commons-cli:commons-cli:1.4'
     compile 'org.yaml:snakeyaml:1.23'
+    compile 'com.jayway.jsonpath:json-path:2.4.0'
+
     
+
     testCompile group: 'junit', name: 'junit', version: '4.11'
+}
+/*
+https://github.com/melix/jmh-gradle-plugin/issues/133
+ */
+task benchmarkJar(type: Jar, dependsOn: jmhJar) {
+    manifest {
+        attributes 'Main-Class': 'org.openjdk.jmh.Main'
+    }
+    archiveName = 'benchmark-jmh.jar'
+    /*classifier = 'benchmark'*/
+    from {
+        (jmhJar.outputs.files + configurations.jmh + configurations.jmhRuntime)
+                .collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
 
 task uberJar(type: Jar,dependsOn:[':build']){
