--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'idea'
 
 //apply plugin: 'maven-publish'
 
-sourceCompatibility = 11
+sourceCompatibility = 1.8
 
 buildscript {
     repositories {
@@ -33,9 +33,11 @@ repositories {
     maven {
         url "https://plugins.gradle.org/m2/"
     }
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
+    compile 'com.github.everit-org.json-schema:org.everit.json.schema:1.11.1'
     compile 'org.json:json:20180813'
     compile 'org.apache.commons:commons-compress:1.7'
     compile 'org.slf4j:slf4j-api:1.7.25'
