--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,8 @@ dependencies {
     compile 'org.yaml:snakeyaml:1.23'
     compile 'com.jayway.jsonpath:json-path:2.4.0'
 
-    
+    compile 'org.graalvm.sdk:graal-sdk:1.0.0-rc14'
+    compile 'org.graalvm.js:js:1.0.0-rc14'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
