--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,8 @@ apply plugin: 'java'
 apply plugin: 'maven'
 apply plugin: 'idea'
 
+archivesBaseName = 'yaup'
+
 //apply plugin: 'maven-publish'
 
 sourceCompatibility = 1.8
