--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.hyperfoil.tools</groupId>
   <artifactId>yaup</artifactId>
-  <version>0.2-SNAPSHOT</version>
+  <version>0.2</version>
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
@@ -20,7 +20,7 @@
     <connection>scm:git:git://github.com/Hyperfoil/yaup.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/Hyperfoil/yaup.git</developerConnection>
     <url>https://github.com/Hyperfoil/yaup</url>
-    <tag>HEAD</tag>
+    <tag>yaup-0.2</tag>
   </scm>
 
   <distributionManagement>
