--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,11 @@
   </build>
   <dependencies>
     <dependency>
+      <groupId>com.github.fge</groupId>
+      <artifactId>json-schema-validator</artifactId>
+      <version>2.2.6</version>
+    </dependency>
+    <dependency>
       <groupId>com.networknt</groupId>
       <artifactId>json-schema-validator</artifactId>
       <version>1.0.29</version>
