--- a/pom.xml
+++ b/pom.xml
@@ -158,13 +158,13 @@
     <dependency>
       <groupId>org.graalvm.sdk</groupId>
       <artifactId>graal-sdk</artifactId>
-      <version>1.0.0-rc14</version>
+      <version>19.3.1</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.graalvm.js</groupId>
       <artifactId>js</artifactId>
-      <version>1.0.0-rc14</version>
+      <version>19.3.1</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
