--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,11 @@
               <minimizeJar>true</minimizeJar>
               <shadedArtifactAttached>true</shadedArtifactAttached>
               <shadedClassifierName>uber</shadedClassifierName> <!-- Any name that makes sense -->
+              <transformers>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                  <mainClass>io.hyperfoil.tools.yaup.JarMain</mainClass>
+                </transformer>
+              </transformers>
             </configuration>
           </execution>
         </executions>
