--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,7 @@
               <goal>shade</goal>
             </goals>
             <configuration>
-              <minimizeJar>true</minimizeJar>
+              <minimizeJar>false</minimizeJar>
               <shadedArtifactAttached>true</shadedArtifactAttached>
               <shadedClassifierName>uber</shadedClassifierName> <!-- Any name that makes sense -->
               <transformers>
