--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <version.maven.gpg>1.6</version.maven.gpg>
     <version.maven-core>3.5.4</version.maven-core>
     <version.maven-plugin-annotations>3.5.1</version.maven-plugin-annotations>
-
+    <graalvm.version>20.1.0</graalvm.version>
   </properties>
   <scm>
     <connection>scm:git:git://github.com/Hyperfoil/yaup.git</connection>
@@ -162,13 +162,13 @@
     <dependency>
       <groupId>org.graalvm.sdk</groupId>
       <artifactId>graal-sdk</artifactId>
-      <version>19.3.1</version>
+      <version>${graalvm.version}</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.graalvm.js</groupId>
       <artifactId>js</artifactId>
-      <version>19.3.1</version>
+      <version>${graalvm.version}</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
