--- a/pom.xml
+++ b/pom.xml
@@ -122,7 +122,12 @@
       <artifactId>json</artifactId>
       <version>20180813</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.11</version>
+      <scope>compile</scope>
+    </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-compress</artifactId>
