--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,9 @@
               <shadedArtifactAttached>true</shadedArtifactAttached>
               <shadedClassifierName>uber</shadedClassifierName> <!-- Any name that makes sense -->
               <transformers>
+                <!-- https://github.com/oracle/graaljs/issues/125 -->
+                <!-- https://maven.apache.org/plugins/maven-shade-plugin/examples/resource-transformers.html#ServicesResourceTransformer -->
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <mainClass>io.hyperfoil.tools.yaup.JarMain</mainClass>
                 </transformer>
