--- a/pom.xml
+++ b/pom.xml
@@ -191,6 +191,11 @@
       <version>1.7.32</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>io.vertx</groupId>
+          <artifactId>vertx-core</artifactId>
+          <version>3.8.3</version>
+      </dependency>
   </dependencies>
 
   <repositories>
