--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <version.maven-core>3.5.4</version.maven-core>
     <version.maven-plugin-annotations>3.5.1</version.maven-plugin-annotations>
     <graalvm.version>21.2.0</graalvm.version>
+    <jackson.version>2.11.4</jackson.version>
   </properties>
   <scm>
     <connection>scm:git:git://github.com/Hyperfoil/yaup.git</connection>
@@ -101,24 +102,14 @@
   </build>
   <dependencies>
     <dependency>
-      <groupId>com.github.fge</groupId>
-      <artifactId>json-schema-validator</artifactId>
-      <version>2.2.14</version>
-    </dependency>
-    <dependency>
-      <groupId>com.networknt</groupId>
-      <artifactId>json-schema-validator</artifactId>
-      <version>1.0.29</version>
-    </dependency>
-    <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
-      <version>2.13.4</version>
+      <version>${jackson.version}</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.13.4</version>
+      <version>${jackson.version}</version>
     </dependency>
     <dependency>
       <groupId>org.json</groupId>
@@ -194,7 +185,7 @@
       <dependency>
           <groupId>io.vertx</groupId>
           <artifactId>vertx-core</artifactId>
-          <version>4.3.1</version>
+          <version>4.3.3</version>
       </dependency>
   </dependencies>
 
