--- a/pom.xml
+++ b/pom.xml
@@ -187,6 +187,11 @@
           <artifactId>vertx-core</artifactId>
           <version>4.3.3</version>
       </dependency>
+      <dependency>
+        <groupId>io.vertx</groupId>
+        <artifactId>vertx-json-schema</artifactId>
+        <version>4.3.3</version>
+      </dependency>
   </dependencies>
 
   <repositories>
