--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
   <url>https://github.com/Hyperfoil/yaup</url>
 
   <properties>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
 
     <version.sonatype.nexus>1.6.8</version.sonatype.nexus>
     <version.maven.source>3.0.1</version.maven.source>
@@ -176,11 +176,11 @@
       <version>4.13.1</version>
       <scope>test</scope>
     </dependency>
-      <dependency>
-          <groupId>io.vertx</groupId>
-          <artifactId>vertx-core</artifactId>
-          <version>4.3.3</version>
-      </dependency>
+<!--      <dependency>-->
+<!--          <groupId>io.vertx</groupId>-->
+<!--          <artifactId>vertx-core</artifactId>-->
+<!--          <version>4.3.3</version>-->
+<!--      </dependency>-->
       <dependency>
         <groupId>io.vertx</groupId>
         <artifactId>vertx-json-schema</artifactId>
