--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,40 @@
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>3.2.2</version>
+        <executions>
+          <execution>
+            <phase>integration-test</phase>
+            <goals>
+              <goal>integration-test</goal>
+              <goal>verify</goal>
+            </goals>
+            <configuration>
+              <skipTests>true</skipTests>
+              <systemPropertyVariables>
+                <uberJarPath>${project.build.directory}/${project.artifactId}-${project.version}-uber.jar</uberJarPath>
+              </systemPropertyVariables>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.2.2</version>
+        <configuration>
+
+          <excludes>pkg/**/*IT.java</excludes>
+          <excludes>%regex[.*IT.class]</excludes>
+          <systemPropertyVariables>
+            <projectArtifactId>${project.artifactId}-${project.version}</projectArtifactId>
+            <projectDir>${project.build.outputDirectory}</projectDir>
+          </systemPropertyVariables>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
         <version>3.2.1</version>
         <executions>
@@ -203,17 +237,9 @@
       <dependency>
         <groupId>io.vertx</groupId>
         <artifactId>vertx-json-schema</artifactId>
-        <version>4.3.3</version>
+        <version>4.4.6</version>
       </dependency>
   </dependencies>
-  <!--
-  <repositories>
-    <repository>
-      <id>jitpack.io</id>
-      <url>https://jitpack.io</url>
-    </repository>
-  </repositories>
-  -->
   <profiles>
     <profile>
       <id>release</id>
@@ -222,7 +248,6 @@
           <name>release</name>
         </property>
       </activation>
-
       <build>
         <plugins>
           <!-- To release to Maven central -->
