--- a/pom.xml
+++ b/pom.xml
@@ -3,22 +3,20 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.hyperfoil.tools</groupId>
   <artifactId>yaup</artifactId>
-  <version>0.8.25-SNAPSHOT</version>
+  <version>0.9.0-SNAPSHOT</version>
   <name>Hyperfoil Yaup</name>
   <description>Yet Another Utility Project</description>
   <url>https://github.com/Hyperfoil/yaup</url>
-
   <properties>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
     <version.sonatype.nexus>1.6.8</version.sonatype.nexus>
     <version.maven.source>3.0.1</version.maven.source>
     <version.maven.javadoc>3.0.1</version.maven.javadoc>
     <version.maven.gpg>1.6</version.maven.gpg>
     <version.maven-core>3.5.4</version.maven-core>
     <version.maven-plugin-annotations>3.5.1</version.maven-plugin-annotations>
-    <graalvm.version>21.2.0</graalvm.version>
+    <graalvm.version>22.3.4</graalvm.version><!--22.3.4-->
     <jackson.version>2.12.7</jackson.version>
   </properties>
   <scm>
@@ -27,7 +25,6 @@
     <url>https://github.com/Hyperfoil/yaup</url>
     <tag>HEAD</tag>
   </scm>
-
     <!-- Licenses -->
     <licenses>
         <license>
@@ -35,7 +32,6 @@
             <url>http://www.apache.org/licenses/LICENSE-2.0</url>
         </license>
     </licenses>
-
     <developers>
           <developer>
             <name>Will Reichert</name>
@@ -62,14 +58,12 @@
             <organizationUrl>http://www.redhat.com</organizationUrl>
         </developer>
 </developers>
-
   <distributionManagement>
     <snapshotRepository>
       <id>ossrh</id>
       <url>https://oss.sonatype.org/content/repositories/snapshots</url>
     </snapshotRepository>
   </distributionManagement>
-
   <build>
     <plugins>
       <plugin>
@@ -97,7 +91,6 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.2.2</version>
         <configuration>
-
           <excludes>pkg/**/*IT.java</excludes>
           <excludes>%regex[.*IT.class]</excludes>
           <systemPropertyVariables>
@@ -135,9 +128,10 @@
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.10.1</version>
             <configuration>
-                <source>9</source>
-                <target>9</target>
+                <source>17</source>
+                <target>17</target>
             </configuration>
         </plugin>
     </plugins>
@@ -196,7 +190,7 @@
     <dependency>
       <groupId>org.yaml</groupId>
       <artifactId>snakeyaml</artifactId>
-      <version>1.32</version>
+      <version>2.2</version><!--1.32-->
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -208,13 +202,13 @@
     <dependency>
       <groupId>org.graalvm.sdk</groupId>
       <artifactId>graal-sdk</artifactId>
-      <version>${graalvm.version}</version>
+      <version>23.0.2</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.graalvm.js</groupId>
       <artifactId>js</artifactId>
-      <version>${graalvm.version}</version>
+      <version>23.0.2</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -288,7 +282,6 @@
               </execution>
             </executions>
           </plugin>
-
           <!-- To sign the artifacts -->
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
@@ -304,9 +297,7 @@
               </execution>
             </executions>
           </plugin>
-
         </plugins>
-
       </build>
     </profile>
   </profiles>
