--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <version.maven.gpg>1.6</version.maven.gpg>
     <version.maven-core>3.5.4</version.maven-core>
     <version.maven-plugin-annotations>3.5.1</version.maven-plugin-annotations>
-    <graalvm.version>23.1.1</graalvm.version><!--22.3.4-->
+    <graalvm.version>23.1.1</graalvm.version>
     <jackson.version>2.12.7</jackson.version>
   </properties>
   <scm>
@@ -110,6 +110,7 @@
               <goal>shade</goal>
             </goals>
             <configuration>
+              <createDependencyReducedPom>false</createDependencyReducedPom>
               <minimizeJar>false</minimizeJar>
               <shadedArtifactAttached>true</shadedArtifactAttached>
               <shadedClassifierName>uber</shadedClassifierName> <!-- Any name that makes sense -->
@@ -163,7 +164,7 @@
     <dependency>
       <groupId>org.json</groupId>
       <artifactId>json</artifactId>
-      <version>20180813</version>
+      <version>20231013</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
@@ -177,12 +178,12 @@
       <version>1.21</version>
       <scope>compile</scope>
     </dependency>
-    <dependency>
+    <!-- <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-simple</artifactId>
       <version>1.7.35</version>
       <scope>compile</scope>
-    </dependency>
+    </dependency> -->
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
@@ -210,7 +211,7 @@
     <dependency>
       <groupId>com.jayway.jsonpath</groupId>
       <artifactId>json-path</artifactId>
-      <version>2.6.0</version>
+      <version>2.8.0</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -266,6 +267,7 @@
           <plugin>
             <groupId>org.sonatype.plugins</groupId>
             <artifactId>nexus-staging-maven-plugin</artifactId>
+            <version>1.6.13</version>
             <extensions>true</extensions>
             <configuration>
               <serverId>ossrh</serverId>
