--- a/pom.xml
+++ b/pom.xml
@@ -184,6 +184,12 @@
       <version>3.5.3.Final</version>
     </dependency>
     <dependency>
+      <groupId>org.jboss.logmanager</groupId>
+      <artifactId>jboss-logmanager</artifactId>
+      <version>3.0.4.Final</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>commons-cli</groupId>
       <artifactId>commons-cli</artifactId>
       <version>1.4</version>
