disable native build args

--- a/cli/src/main/resources/application.properties
+++ b/cli/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-quarkus.native.additional-build-args=--report-unsupported-elements-at-runtime,--initialize-at-run-time=io.netty.util.internal.logging.Log4JLogger
+#quarkus.native.additional-build-args=--report-unsupported-elements-at-runtime,--initialize-at-run-time=io.netty.util.internal.logging.Log4JLogger
 #quarkus.native.additional-build-args=--initialize-at-run-time=io.netty.util.internal.logging.Log4JLogger
 #disables the 'QUARKUS' banner at the start of logging
 quarkus.banner.enabled=false
