add xmlMessages bundle for --json output

--- a/cli/src/main/resources/application.properties
+++ b/cli/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+#XMLMessages is needed for pojo.Xml.parse
+quarkus.native.additional-build-args=-H:IncludeResourceBundles=com.sun.org.apache.xerces.internal.impl.msg.XMLMessages
+#how do we add the above to the build instructions?
 #quarkus.native.additional-build-args=--report-unsupported-elements-at-runtime,--initialize-at-run-time=io.netty.util.internal.logging.Log4JLogger
 #quarkus.native.additional-build-args=--initialize-at-run-time=io.netty.util.internal.logging.Log4JLogger
 #disables the 'QUARKUS' banner at the start of logging
