add cli interface testing

--- a/cli/src/main/resources/application.properties
+++ b/cli/src/main/resources/application.properties
@@ -7,7 +7,12 @@ quarkus.native.additional-build-args=-H:IncludeResourceBundles=com.sun.org.apach
 quarkus.banner.enabled=false
 #disables the default console handler for the native "prod"
 %prod.quarkus.log.console.enable=false
+quarkus.log.console.enable=false
 #disable the runner suffix
 #quarkus.package.runner-suffix=null
-quarkus.package.jar.add-runner-suffix=false
+#quarkus.package.jar.add-runner-suffix=false
 quarkus.package.add-runner-suffix=false
+
+quarkus.log.console.format=%d{HH:mm:ss.SSS} %l %m%n
+#quarkus.log.category."io.quarkus".level=ERROR
+quarkus.log.console.darken=1
