use jboss-logging over log4j

--- a/cli/src/main/resources/application.properties
+++ b/cli/src/main/resources/application.properties
@@ -8,11 +8,14 @@ quarkus.banner.enabled=false
 #disables the default console handler for the native "prod"
 %prod.quarkus.log.console.enable=false
 quarkus.log.console.enable=false
+
+quarkus.native.resources.includes=jsonpath.js,luxon.min.js
+
 #disable the runner suffix
 #quarkus.package.runner-suffix=null
 #quarkus.package.jar.add-runner-suffix=false
 quarkus.package.add-runner-suffix=false
 
-quarkus.log.console.format=%d{HH:mm:ss.SSS} %l %m%n
+#quarkus.log.console.format=%d{HH:mm:ss.SSS} %l %m%n
 #quarkus.log.category."io.quarkus".level=ERROR
-quarkus.log.console.darken=1
+#quarkus.log.console.darken=1
