--- a/pom.xml
+++ b/pom.xml
@@ -120,16 +120,16 @@
                 <artifactId>jboss-logging</artifactId>
                 <version>3.5.3.Final</version>
             </dependency>
-            <dependency>
-                <groupId>org.jboss.logmanager</groupId>
-                <artifactId>log4j2-jboss-logmanager</artifactId>
-                <version>1.1.2.Final</version>
-            </dependency>
+<!--            <dependency>-->
+<!--                <groupId>org.jboss.logmanager</groupId>-->
+<!--                <artifactId>log4j2-jboss-logmanager</artifactId>-->
+<!--                <version>1.1.2.Final</version>-->
+<!--            </dependency>-->
             <dependency>
                 <groupId>org.jboss.logmanager</groupId>
                 <artifactId>jboss-logmanager</artifactId>
                 <version>3.0.4.Final</version>
-                <scope>test</scope>
+<!--                <scope>test</scope>-->
             </dependency>
 
             <dependency>
