--- a/yaup/pom.xml
+++ b/yaup/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.hyperfoil.tools</groupId>
         <artifactId>hyperfoil-yaup</artifactId>
-        <version>0.9.4-SNAPSHOT</version>
+        <version>0.9.4</version>
     </parent>
 
   <artifactId>yaup</artifactId>
