add missing publishing configuration

--- a/pom.xml
+++ b/pom.xml
@@ -324,6 +324,11 @@
                         <groupId>org.sonatype.central</groupId>
                         <artifactId>central-publishing-maven-plugin</artifactId>
                         <extensions>true</extensions>
+                        <configuration>
+                            <publishingServerId>central</publishingServerId>
+                            <autoPublish>true</autoPublish>
+                            <waitUntil>published</waitUntil>
+                        </configuration>
                     </plugin>
                     <!-- To generate javadoc -->
                     <plugin>
