--- a/pom.xml
+++ b/pom.xml
@@ -277,7 +277,7 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-release-plugin</artifactId>
                     <configuration>
-                        <releaseProfiles>do-release</releaseProfiles>
+                        <releaseProfiles>release</releaseProfiles>
                         <tagNameFormat>@{project.version}</tagNameFormat>
                     </configuration>
                 </plugin>
