--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>io.hyperfoil.tools</groupId>
     <artifactId>hyperfoil-yaup</artifactId>
-    <version>0.9.6</version>
+    <version>0.9.7-SNAPSHOT</version>
   </parent>
 
   <artifactId>cli</artifactId>
