--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>hyperfoil-yaup</artifactId>
     <version>0.9.7-SNAPSHOT</version>
   </parent>
-
+  <name>yaup-cli</name>
   <artifactId>cli</artifactId>
 
   <properties>
