--- a/yaup/pom.xml
+++ b/yaup/pom.xml
@@ -7,7 +7,7 @@
         <artifactId>hyperfoil-yaup</artifactId>
         <version>0.9.7-SNAPSHOT</version>
     </parent>
-
+  <name>yaup</name>
   <artifactId>yaup</artifactId>
 
   <properties>
