--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>io.hyperfoil.tools</groupId>
     <artifactId>hyperfoil-yaup</artifactId>
     <packaging>pom</packaging>
-    <version>0.9.8</version>
+    <version>0.9.9-SNAPSHOT</version>
     <modules>
         <module>yaup</module>
         <module>cli</module>
@@ -17,7 +17,7 @@
         <connection>scm:git:git://github.com/Hyperfoil/yaup.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/Hyperfoil/yaup.git</developerConnection>
         <url>https://github.com/Hyperfoil/yaup</url>
-        <tag>0.9.8</tag>
+        <tag>0.9.3</tag>
     </scm>
     <licenses>
         <license>
