--- a/yaup/pom.xml
+++ b/yaup/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.hyperfoil.tools</groupId>
         <artifactId>hyperfoil-yaup</artifactId>
-        <version>0.9.8</version>
+        <version>0.9.9-SNAPSHOT</version>
     </parent>
   <name>yaup</name>
   <artifactId>yaup</artifactId>
