add uber-jar to cli

--- a/cli/src/main/resources/application.properties
+++ b/cli/src/main/resources/application.properties
@@ -19,3 +19,5 @@ quarkus.package.add-runner-suffix=false
 #quarkus.log.console.format=%d{HH:mm:ss.SSS} %l %m%n
 #quarkus.log.category."io.quarkus".level=ERROR
 #quarkus.log.console.darken=1
+
+quarkus.package.type=uber-jar
