--- a/yaup/pom.xml
+++ b/yaup/pom.xml
@@ -4,7 +4,7 @@
 
   <parent>
     <groupId>io.hyperfoil.tools</groupId>
-    <artifactId>hyperfoil-yaup</artifactId>
+    <artifactId>yaup-parent</artifactId>
     <version>0.9.9-SNAPSHOT</version>
   </parent>
   <name>yaup</name>
@@ -25,7 +25,7 @@
 
     <dependency>
       <groupId>${project.groupId}</groupId>
-      <artifactId>yaup</artifactId>
+      <artifactId>yaup-core</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
