--- a/yaup-core/pom.xml
+++ b/yaup-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.hyperfoil.tools</groupId>
         <artifactId>yaup-parent</artifactId>
-        <version>0.9.11</version>
+        <version>0.9.12-SNAPSHOT</version>
     </parent>
   <name>yaup-core</name>
   <artifactId>yaup-core</artifactId>
